fix overflow bug in portfolio

--- a/styles.css
+++ b/styles.css
@@ -21,18 +21,17 @@ a:visited {
 }
 
 a:hover {
-  font-size:1.2em;
   -webkit-transition:0.3s ease;
   -moz-transition:0.3s ease;
   -ms-transition:0.3s ease;
   -o-transition:0.3s ease;
   transition:0.3s ease;
+  /*font-size:1.2em;*/
+  padding-bottom:1em;
   border-bottom:3px solid black;
 }
 
 a:hover.image{
-  border-bottom:none;
-  font-size:1em;
   -webkit-filter: drop-shadow(-1px 2px 2px grey);
   filter: drop-shadow(-1px 2px 2px grey);
 }
@@ -106,7 +105,7 @@ h3 {
 .nav {
   position: fixed;
   width:98%;
-  background-color: rgba(204, 204, 204, 0.9);
+  background-color: rgba(204, 204, 204, 1);
   margin-top:0px;
   z-index:1;
   -webkit-transition:0.4s ease;
@@ -118,7 +117,7 @@ h3 {
 
 .light-nav {
   background-color: rgba(255,255,255,0.85);
-  padding:0.2em 0em 0.2em 0em;
+  padding:0.1em 0em 0.1em 0em;
   width:100%;
   -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
   -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
@@ -147,7 +146,7 @@ h3 {
 }
 
 .row {
-  overflow:auto;
+  overflow:hidden;
 }
 
 
